feat: replace bash flag parsing with Clojure tools.cli layer
Move --namespace, --port, --idle-timeout parsing from bin/memlayer bash
script into Clojure entry points using tools.cli. bin/memlayer now only
handles pre-JVM concerns (jar resolution, .env sourcing, mode dispatch)
and passes remaining args through to Java via "$@".

Config precedence: config.edn defaults → env vars → CLI flag overrides.

- Add org.clojure/tools.cli dependency
- Create memlayer.cli namespace with shared option specs and parsing
- Add config/load-config overrides arity with deep-merge
- Update all three entry points (mcp/server, local, system) to parse args
- Simplify bin/memlayer: remove --namespace parsing, pass args through
- Update README with --port examples and CLI flag column in config table

Fixes MEM-104